--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Glasswall Rebuild
         uses: tpilvelis-gw/rebuild-action@v1
         with:
-          filetype: 'xlsx'
+          filetype: 'pptx'
